scrape stage of project is relatively finished, just waiting to gather more data. In this commit, I added some notebooks with some studies to develop the cifra and artists genre web scraper. Also, there a notebook with initial data analysis of some preview results. So far, we collected more than 64k cifras written in Portuguese. A subset of about 4k cifras also include information about the song's audio features that is collected from spotify.

--- a/cifra-web-scrape-study.ipynb
+++ b/cifra-web-scrape-study.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "848b6133",
+   "id": "fea80e15",
    "metadata": {},
    "source": [
     "# Scrape data from music-learning websites"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fee3b1cd",
+   "id": "6b82bf86",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "285422d2",
+   "execution_count": 1,
+   "id": "ed3f1f36",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "74a24493",
+   "id": "80d2ae8a",
    "metadata": {},
    "outputs": [
     {
@@ -99,8 +99,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "1329490b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\r\n",
+      "<sitemapindex xmlns=\"http://www.sitemaps.org/schemas/sitemap/0.9\"><sitemap><loc>https://www.cifras.com.br/sitemaps/artists-1.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/artists-2.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/artists-3.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/artists-4.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/top-songs-1.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-1.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-2.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-3.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-4.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-5.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-6.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-7.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-8.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-9.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-10.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-11.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-12.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-13.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-14.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-15.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-16.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-17.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-18.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-19.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-20.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-21.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-22.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-23.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-24.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/songs-25.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/genres-1.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/playlists-1.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/playlists-2.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/playlists-3.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/playlists-4.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/playlists-5.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/playlists-6.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/playlists-7.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/playlists-8.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/playlists-9.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap><sitemap><loc>https://www.cifras.com.br/sitemaps/albums-1.xml.gz</loc><lastmod>2023-12-07T02:33:52+00:00</lastmod></sitemap></sitemapindex>"
+     ]
+    }
+   ],
+   "source": [
+    "!zcat sitemap_index.xml.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "82895d91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xml.etree.ElementTree as ET\n",
+    "import requests\n",
+    "import gzip\n",
+    "\n",
+    "def extract_urls(xml_file):\n",
+    "    urls = []\n",
+    "    tree = ET.parse(xml_file)\n",
+    "    root = tree.getroot()\n",
+    "\n",
+    "    for sitemap in root.findall('sitemap'):\n",
+    "        loc = sitemap.find('loc').text\n",
+    "\n",
+    "        if loc.endswith('.xml.gz'):  # Handle compressed sitemaps\n",
+    "            response = requests.get(loc)\n",
+    "            with gzip.open(response.content, 'rb') as f:\n",
+    "                urls.extend(extract_urls(f))\n",
+    "        else:\n",
+    "            urls.append(loc)\n",
+    "\n",
+    "    return urls\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    xml_file = 'sitemap_index.xml'  # Replace with the actual file path\n",
+    "    all_urls = extract_urls(xml_file)\n",
+    "    print(all_urls)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
-   "id": "09aed960",
+   "id": "d4f26e8e",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8c49b419",
+   "id": "bfbce5b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "82a34116",
+   "id": "7935e3aa",
    "metadata": {},
    "outputs": [
     {
@@ -170,9 +231,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f36d6d43",
+   "metadata": {},
+   "source": [
+    "### This is strange because we know that the link exists, even though it does not appear in the site map file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0506fb5",
+   "metadata": {},
+   "source": [
+    "## Let's scrape data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c5ed2db5",
+   "id": "a590fb8f",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a85d8cca",
+   "id": "2982e570",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bcfb7687",
+   "id": "b6c2d0cf",
    "metadata": {},
    "outputs": [
     {
@@ -335,22 +412,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9e74339",
+   "id": "908aa3ac",
    "metadata": {},
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e86a67f9",
+   "cell_type": "markdown",
+   "id": "b135cb64",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### It works! So let's build a loop to scrape a list of weblinks"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6efbd6d9",
+   "id": "aa1e2da7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f28fb2ae",
+   "id": "3ba23540",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e4adbef0",
+   "id": "96f89585",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "ab3c2f2e",
+   "id": "b6820390",
    "metadata": {},
    "outputs": [
     {
@@ -521,9 +598,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4b826ac",
+   "metadata": {},
+   "source": [
+    "## We need to get the main chord\n",
+    "\n",
+    "With this information we can move all cifras to a comum main chord, so we can have better learning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "da87ac3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dm\n"
+     ]
+    }
+   ],
+   "source": [
+    "def scrape_chord(url):\n",
+    "\n",
+    "    try:\n",
+    "        options = Options()\n",
+    "        options.add_argument(\"--headless\")\n",
+    "\n",
+    "        driver = webdriver.Firefox(options=options)\n",
+    "\n",
+    "        driver.get(url)\n",
+    "        driver.implicitly_wait(10)\n",
+    "        \n",
+    "        soup = BeautifulSoup(driver.page_source, \"lxml\")\n",
+    "        \n",
+    "        chordsoup = soup.find(\"button\", class_=\"btn btn-icon icon-md\").text.strip() \n",
+    "        \n",
+    "        driver.quit()\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Scraping Error!!!!\")\n",
+    "        print(e)\n",
+    "        return \"ERROR!!\"\n",
+    "\n",
+    "    return chordsoup\n",
+    "\n",
+    "url = \"https://www.cifras.com.br/cifra/joao-gilberto/chega-de-saudade\"\n",
+    "chord_txt = scrape_chord(url)\n",
+    "print(chord_txt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c67bdf15",
+   "metadata": {},
+   "source": [
+    "## Simply scrape webpage title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a3ecbf3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: Chega de Saudade - João Gilberto | CIFRAS\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "def scrape_title_with_requests(url):\n",
+    "    try:\n",
+    "        # Send an HTTP GET request to the URL\n",
+    "        response = requests.get(url)\n",
+    "        response.raise_for_status()  # Raise an HTTPError for bad responses\n",
+    "\n",
+    "        # Parse the HTML content with BeautifulSoup\n",
+    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "        # Get the title tag content\n",
+    "        title = soup.title.string if soup.title else None\n",
+    "\n",
+    "        return title\n",
+    "\n",
+    "    except requests.exceptions.RequestException as e:\n",
+    "        print(f\"Request Error: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "# Example usage\n",
+    "url = \"https://www.cifras.com.br/cifra/joao-gilberto/chega-de-saudade\"\n",
+    "title = scrape_title_with_requests(url)\n",
+    "print(f\"Title: {title}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16444d22",
+   "id": "7e18bd5e",
    "metadata": {},
    "outputs": [],
    "source": []
