Begin building a function to transform music chords into generic notation

--- a/initial-data-analysis.ipynb
+++ b/initial-data-analysis.ipynb
@@ -6888,7 +6888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "8630ec34",
    "metadata": {},
    "outputs": [],
@@ -8313,7 +8313,7 @@
     "import signal\n",
     "from tqdm import tqdm\n",
     "\n",
-    "def return_harmony(cifra_df_item, timeout=5):\n",
+    "def return_harmony(cifra_df_item, idx, timeout=10):\n",
     "    def is_valid_chord(key):\n",
     "        valid_key_pattern = \"^(?:\\()?[A-G]\"\n",
     "        valid_key_pattern += \"(?:(#|b|[2-9])?\"\n",
@@ -8356,7 +8356,7 @@
     "        signal.alarm(0)\n",
     "\n",
     "\n",
-    "cifras_df_harmony = [return_harmony(row) for index, row in tqdm(valid_cifras_df.iterrows())]"
+    "cifras_df_harmony = [return_harmony(row, index) for index, row in tqdm(valid_cifras_df.iterrows())]"
    ]
   },
   {
@@ -8678,8 +8678,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cac86ad6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chord_position = {'A':0, 'B':1, 'C':2, 'D':3, 'E':4, 'F':5, 'G':6}\n",
+    "chord_position['B']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ff51f486",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chord_position = {'Ab':11, 'A':0, 'A#':1, \n",
+    "                  'Bb':1, 'B':2,  \n",
+    "                  'C':3, 'C#':4, \n",
+    "                  'Db':4, 'D':5, 'D#':6, \n",
+    "                  'Eb':6, 'E':7, \n",
+    "                  'F':8, 'F#':9, \n",
+    "                  'Gb':9, 'G':10, 'G#':11}\n",
+    "chord_position['Bb']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4eb21005",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chord_position['A#']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1d2dfa77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chord_position['Ab']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6c700586",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "htest = ['Dm', 'C', 'E', 'F', 'Dm', 'Bb', 'F', 'Dm', 'Bb', 'F', 'Em', 'Dm', 'Bb', 'F', 'Gm', 'Dm', 'C', \n",
+    "        'Gm', 'Dm', 'C', 'Dm', 'Bb', 'F', 'Dm', 'Bb', 'F', 'Gm', 'Dm', 'C', 'Gm', 'Dm', 'C', 'Bb', 'F', \n",
+    "        'C', 'Bb', 'F', 'C', 'Bb', 'A', 'Dm', 'C', 'Bb', 'Bb', 'C', 'Dm', 'C', 'Dm', 'C', 'E', 'F', 'Dm', \n",
+    "        'Bb', 'F', 'Dm', 'Bb', 'F', 'Em', 'Dm', 'Bb', 'F', 'Gm', 'Dm', 'C', 'Gm', 'Dm', 'C', 'Dm', 'Bb', \n",
+    "        'F', 'Dm', 'Bb', 'F', 'Gm', 'Dm', 'C', 'F', 'Am', 'Bb', 'Bb', 'C', 'Bb', 'F', 'C', 'Bb', 'F', 'C', \n",
+    "        'Bb', 'A', 'F', 'C', 'Am', 'Bb', 'Dm', 'C', 'Dm', 'C/E', 'F', 'Dm', 'Bb', 'F', 'Dm', 'C/E', 'F', \n",
+    "        'Dm', 'Bb', 'F', 'Gm', 'Dm', 'C', 'Gm', 'Dm', 'C', 'E', 'Dm', 'C/E', 'F', 'Dm', 'Bb', 'F', 'Gm', \n",
+    "        'Dm', 'C', 'F', 'Am', 'Bb', 'Bb', 'C', 'E', 'Bb', 'F', 'C', 'Bb', 'F', 'C', 'Bb', 'A', 'Dm', 'C', \n",
+    "        'Bb', 'Bb', 'C', 'Dm', 'C', 'Bb']\n",
+    "ktest = 'F'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "4207f5d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# Get only key\n",
+    "chord = htest[0]\n",
+    "match = re.match(r'([A-G][#b]?).*', chord)\n",
+    "match.group(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a15d0bee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['D', 'C', 'E', 'F', 'D', 'Bb', 'F', 'D', 'Bb', 'F', 'E', 'D', 'Bb', 'F', 'G', 'D', 'C', 'G', 'D', 'C', 'D', 'Bb', 'F', 'D', 'Bb', 'F', 'G', 'D', 'C', 'G', 'D', 'C', 'Bb', 'F', 'C', 'Bb', 'F', 'C', 'Bb', 'A', 'D', 'C', 'Bb', 'Bb', 'C', 'D', 'C', 'D', 'C', 'E', 'F', 'D', 'Bb', 'F', 'D', 'Bb', 'F', 'E', 'D', 'Bb', 'F', 'G', 'D', 'C', 'G', 'D', 'C', 'D', 'Bb', 'F', 'D', 'Bb', 'F', 'G', 'D', 'C', 'F', 'A', 'Bb', 'Bb', 'C', 'Bb', 'F', 'C', 'Bb', 'F', 'C', 'Bb', 'A', 'F', 'C', 'A', 'Bb', 'D', 'C', 'D', 'C', 'F', 'D', 'Bb', 'F', 'D', 'C', 'F', 'D', 'Bb', 'F', 'G', 'D', 'C', 'G', 'D', 'C', 'E', 'D', 'C', 'F', 'D', 'Bb', 'F', 'G', 'D', 'C', 'F', 'A', 'Bb', 'Bb', 'C', 'E', 'Bb', 'F', 'C', 'Bb', 'F', 'C', 'Bb', 'A', 'D', 'C', 'Bb', 'Bb', 'C', 'D', 'C', 'Bb']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_only_key(chord): return re.match(r'([A-G][#b]?).*', chord).group(1)\n",
+    "print([get_only_key(chord) for chord in htest])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1ce86c0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 3, 7, 8, 5, 1, 8, 5, 1, 8, 7, 5, 1, 8, 10, 5, 3, 10, 5, 3, 5, 1, 8, 5, 1, 8, 10, 5, 3, 10, 5, 3, 1, 8, 3, 1, 8, 3, 1, 0, 5, 3, 1, 1, 3, 5, 3, 5, 3, 7, 8, 5, 1, 8, 5, 1, 8, 7, 5, 1, 8, 10, 5, 3, 10, 5, 3, 5, 1, 8, 5, 1, 8, 10, 5, 3, 8, 0, 1, 1, 3, 1, 8, 3, 1, 8, 3, 1, 0, 8, 3, 0, 1, 5, 3, 5, 3, 8, 5, 1, 8, 5, 3, 8, 5, 1, 8, 10, 5, 3, 10, 5, 3, 7, 5, 3, 8, 5, 1, 8, 10, 5, 3, 8, 0, 1, 1, 3, 7, 1, 8, 3, 1, 8, 3, 1, 0, 5, 3, 1, 1, 3, 5, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([chord_position[chord] for chord in [get_only_key(chord) for chord in htest]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f92b9cc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 7, 11, 12, 9, 5, 12, 9, 5, 12, 11, 9, 5, 12, 14, 9, 7, 14, 9, 7, 9, 5, 12, 9, 5, 12, 14, 9, 7, 14, 9, 7, 5, 12, 7, 5, 12, 7, 5, 4, 9, 7, 5, 5, 7, 9, 7, 9, 7, 11, 12, 9, 5, 12, 9, 5, 12, 11, 9, 5, 12, 14, 9, 7, 14, 9, 7, 9, 5, 12, 9, 5, 12, 14, 9, 7, 12, 4, 5, 5, 7, 5, 12, 7, 5, 12, 7, 5, 4, 12, 7, 4, 5, 9, 7, 9, 7, 12, 9, 5, 12, 9, 7, 12, 9, 5, 12, 14, 9, 7, 14, 9, 7, 11, 9, 7, 12, 9, 5, 12, 14, 9, 7, 12, 4, 5, 5, 7, 11, 5, 12, 7, 5, 12, 7, 5, 4, 9, 7, 5, 5, 7, 9, 7, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([12+chord_position[chord]-chord_position[ktest] for chord in [get_only_key(chord) for chord in htest]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "c91b1c69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chord_generic = { 0:\"I\", 1:\"I#\", 2:\"II\", 3:\"II#\", 4:\"III\", \n",
+    "                 5:\"IV\", 6:\"IV#\", 7:\"V\", 8:\"V#\", 9:\"VI\", \n",
+    "                 10:\"VI#\", 11:\"VII\", 12:\"I\", 13:\"I#\", \n",
+    "                 14:\"II\", 15:\"II#\", 16:\"III\", 16:\"IV\", \n",
+    "                 17:\"IV#\", 18:\"V\", 19:\"V#\", 20:\"VI\"}\n",
+    "\n",
+    "chord_generic[12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7db5ec19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c001afbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['VI', 'V', 'VII', 'I', 'VI', 'IV', 'I', 'VI', 'IV', 'I', 'VII', 'VI', 'IV', 'I', 'II', 'VI', 'V', 'II', 'VI', 'V', 'VI', 'IV', 'I', 'VI', 'IV', 'I', 'II', 'VI', 'V', 'II', 'VI', 'V', 'IV', 'I', 'V', 'IV', 'I', 'V', 'IV', 'III', 'VI', 'V', 'IV', 'IV', 'V', 'VI', 'V', 'VI', 'V', 'VII', 'I', 'VI', 'IV', 'I', 'VI', 'IV', 'I', 'VII', 'VI', 'IV', 'I', 'II', 'VI', 'V', 'II', 'VI', 'V', 'VI', 'IV', 'I', 'VI', 'IV', 'I', 'II', 'VI', 'V', 'I', 'III', 'IV', 'IV', 'V', 'IV', 'I', 'V', 'IV', 'I', 'V', 'IV', 'III', 'I', 'V', 'III', 'IV', 'VI', 'V', 'VI', 'V', 'I', 'VI', 'IV', 'I', 'VI', 'V', 'I', 'VI', 'IV', 'I', 'II', 'VI', 'V', 'II', 'VI', 'V', 'VII', 'VI', 'V', 'I', 'VI', 'IV', 'I', 'II', 'VI', 'V', 'I', 'III', 'IV', 'IV', 'V', 'VII', 'IV', 'I', 'V', 'IV', 'I', 'V', 'IV', 'III', 'VI', 'V', 'IV', 'IV', 'V', 'VI', 'V', 'IV']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([chord_generic[chord] for chord in [12+chord_position[chord]-chord_position[ktest] \n",
+    "       for chord in [get_only_key(chord) for chord in htest]]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72d833cf",
    "metadata": {},
    "outputs": [],
    "source": []
