Begin to clean redundant information from chord vocabulary.

--- a/initial-data-analysis.ipynb
+++ b/initial-data-analysis.ipynb
@@ -8676,7 +8676,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c1f4767b",
+   "id": "27f5b59f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8685,7 +8685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91a577ab",
+   "id": "2595e90e",
    "metadata": {},
    "source": [
     "## TODO:\n",
@@ -8820,7 +8820,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a2cddb1e",
+   "id": "c390994c",
    "metadata": {},
    "outputs": [
     {
@@ -8843,7 +8843,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "aa146913",
+   "id": "75ee26dc",
    "metadata": {},
    "outputs": [
     {
@@ -8871,7 +8871,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "83762769",
+   "id": "d2bc6231",
    "metadata": {},
    "outputs": [
     {
@@ -8926,7 +8926,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "edfe5cec",
+   "id": "1b1af966",
    "metadata": {},
    "outputs": [
     {
@@ -8985,7 +8985,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "904b9aa6",
+   "id": "21017c2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9000,7 +9000,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7c646ab2",
+   "id": "5473214d",
    "metadata": {},
    "outputs": [
     {
@@ -9020,7 +9020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88aaafd5",
+   "id": "89968b0e",
    "metadata": {},
    "source": [
     "### TO-DO:\n",
@@ -9031,7 +9031,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "50417814",
+   "id": "f4ecd6ab",
    "metadata": {},
    "outputs": [
     {
@@ -9053,7 +9053,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "8c88a4c6",
+   "id": "b3af55b3",
    "metadata": {},
    "outputs": [
     {
@@ -9087,7 +9087,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "b6506dc0",
+   "id": "66280c98",
    "metadata": {},
    "outputs": [
     {
@@ -9107,7 +9107,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "7a157394",
+   "id": "1ffc2384",
    "metadata": {},
    "outputs": [
     {
@@ -9127,7 +9127,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "96777ba4",
+   "id": "6b06f0ad",
    "metadata": {},
    "outputs": [
     {
@@ -9147,7 +9147,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "1ac78071",
+   "id": "f86fe993",
    "metadata": {},
    "outputs": [
     {
@@ -9180,7 +9180,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "e284b4c3",
+   "id": "a252794c",
    "metadata": {},
    "outputs": [
     {
@@ -9203,7 +9203,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "f681cad6",
+   "id": "ee7b3b3b",
    "metadata": {},
    "outputs": [
     {
@@ -9224,7 +9224,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "07d027d4",
+   "id": "04b57688",
    "metadata": {},
    "outputs": [
     {
@@ -9244,7 +9244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a5d11ee",
+   "id": "679bd5c8",
    "metadata": {},
    "source": [
     "## Get True Chord Vocabulary from the extracted harmony\n",
@@ -9257,7 +9257,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "9c574cd5",
+   "id": "bccfbb8b",
    "metadata": {},
    "outputs": [
     {
@@ -9283,7 +9283,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "6ced2a0e",
+   "id": "a0c7b497",
    "metadata": {},
    "outputs": [
     {
@@ -9311,7 +9311,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "71662326",
+   "id": "12e6bce4",
    "metadata": {},
    "outputs": [
     {
@@ -9431,7 +9431,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "67104f4f",
+   "id": "9154bb5c",
    "metadata": {},
    "outputs": [
     {
@@ -9452,7 +9452,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "016415c6",
+   "id": "2f63fbb7",
    "metadata": {},
    "outputs": [
     {
@@ -9476,7 +9476,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "345a1663",
+   "id": "ec4d274a",
    "metadata": {},
    "outputs": [
     {
@@ -9503,7 +9503,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "ebd7af9b",
+   "id": "39bef44a",
    "metadata": {},
    "outputs": [
     {
@@ -9524,7 +9524,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "961d7173",
+   "id": "c52dde04",
    "metadata": {},
    "outputs": [
     {
@@ -9545,7 +9545,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "45674bab",
+   "id": "6e13b987",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9564,7 +9564,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "0f263155",
+   "id": "707aa8da",
    "metadata": {},
    "outputs": [
     {
@@ -9588,7 +9588,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "7f8592e4",
+   "id": "ea45d9f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9598,7 +9598,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "cbb2b466",
+   "id": "2da4d20b",
    "metadata": {},
    "outputs": [
     {
@@ -9625,7 +9625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73d2e4ff",
+   "id": "765e5f1a",
    "metadata": {},
    "source": [
     "### Cifra Chord Total Vocabulary\n",
@@ -9636,7 +9636,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "d1b179a6",
+   "id": "1c439685",
    "metadata": {},
    "outputs": [
     {
@@ -9660,7 +9660,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "ac864ace",
+   "id": "3918aac4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9676,7 +9676,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "867f6ded",
+   "id": "3863c19a",
    "metadata": {},
    "outputs": [
     {
@@ -9694,7 +9694,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "173ccfa2",
+   "id": "3e90ebe5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9704,7 +9704,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "9789eed2",
+   "id": "fe769bfe",
    "metadata": {},
    "outputs": [
     {
@@ -9721,7 +9721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a73ef22",
+   "id": "72c7502f",
    "metadata": {},
    "source": [
     "#### Guitar Riff melody information present\n",
@@ -9740,11 +9740,214 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 156,
+   "id": "8adc5681",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is a total of 7339 unique chords, including many mistakes!\n",
+      "After removing chord that begins with '(' there are 6919 unique chords\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_chord_vocab = np.unique(all_songs_vocab_lst_flat).tolist()\n",
+    "\n",
+    "print(f\"There is a total of {len(total_chord_vocab)} unique chords, including many mistakes!\")\n",
+    "# Remove first parenthesis for all chords\n",
+    "chord_vocab_nopa = []\n",
+    "for chord in total_chord_vocab:\n",
+    "    if chord == \"\":\n",
+    "        chord_vocab_nopa.append(\"\")\n",
+    "    elif chord[0] == \"(\":\n",
+    "        chord_vocab_nopa.append(chord[1:])\n",
+    "    else:\n",
+    "        chord_vocab_nopa.append(chord)\n",
+    "\n",
+    "chord_vocab_filtered = np.unique(chord_vocab_nopa).tolist()\n",
+    "print(f\"After removing chord that begins with '(' there are {len(chord_vocab_filtered)} unique chords\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "d9a71479",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample of removed chords:\n",
+      "['(G6', '(Cº)', '(E7)', '(Cm', '(Ebm7/9', '(Bm/A)', '(C#4', '(A)', '(Dm', 'Eb7/9)']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Sample of removed chords:\")\n",
+    "print(list(set(total_chord_vocab) ^ set(chord_vocab_nopa))[0:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "c44ac900",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_balanced_parenthesis(string):\n",
+    "    stack = []\n",
+    "    for char in string:\n",
+    "        if char == '(':\n",
+    "            stack.append(char)\n",
+    "        elif char == ')':\n",
+    "            if not stack:\n",
+    "                return False  # Extra closing parenthesis\n",
+    "            stack.pop()\n",
+    "    return not stack  # Unclosed opening parenthesis\n",
+    "\n",
+    "# Test cases\n",
+    "string1 = \"A)\"\n",
+    "string2 = \"(A)\"\n",
+    "string3 = \"((A)\"\n",
+    "string4 = \"A\"\n",
+    "\n",
+    "print(check_balanced_parenthesis(string1))  # Output: False\n",
+    "print(check_balanced_parenthesis(string2))  # Output: True\n",
+    "print(check_balanced_parenthesis(string3))  # Output: False\n",
+    "print(check_balanced_parenthesis(string4))  # Output: False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "5e496a72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 475 chords with parenthesis logic.\n",
+      "So now we have 6444 chords our filtered vocabulary.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if parenthesis logic to remove them from the end of the chord str\n",
+    "wrong_parlogic = []\n",
+    "for chord in chord_vocab_filtered:\n",
+    "    if chord != \"\" and not check_balanced_parenthesis(chord):\n",
+    "        wrong_parlogic.append(chord)\n",
+    "\n",
+    "print(f\"There are {len(wrong_parlogic)} chords with parenthesis logic.\")\n",
+    "print(f\"So now we have {len(chord_vocab_filtered) - len(wrong_parlogic)} chords our filtered vocabulary.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "e74fda74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A#)', 'A#6)', 'A#7)', 'A#7/11)', 'A#m)', 'A#m7)', 'A#°)', 'A#º)', 'A(', 'A)']"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrong_parlogic[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "6e062774",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 343 riffs strings that are confused as chords.\n",
+      "So now we have 6101 chords our filtered vocabulary.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for riffs in the vocab\n",
+    "\n",
+    "def has_consecutive_dashes(string):\n",
+    "    return bool(re.search(r\"--\", string))\n",
+    "\n",
+    "riffs = []\n",
+    "for chord in chord_vocab_filtered:\n",
+    "    if chord != \"\" and has_consecutive_dashes(chord):\n",
+    "        riffs.append(chord)\n",
+    "        \n",
+    "print(f\"There are {len(riffs)} riffs strings that are confused as chords.\")\n",
+    "print(f\"So now we have {len(chord_vocab_filtered) - len(wrong_parlogic) - len(riffs)} chords our filtered vocabulary.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "c7a1d868",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A----',\n",
+       " 'A-----------',\n",
+       " 'A--------------',\n",
+       " 'A---------------',\n",
+       " 'A------------------',\n",
+       " 'A--------------------',\n",
+       " 'A----------------------',\n",
+       " 'A-----------------------',\n",
+       " 'A------------------------',\n",
+       " 'A--------------------------']"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "riffs[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "820ae203",
+   "id": "24ebd3ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Remove '.', ',' and '*' from chords vocab"
+   ]
   }
  ],
  "metadata": {
